[project]
name = "tutorial-pybr"
version = "0.1.0"
description = ""
authors = [
    {name = "carlossant77",email = "josesantiag2461@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
httpie = "^3.2.4"
pytest = "^8.4.1"

